# forge

./: ideas.md
3dprinting-shenanigans/: do.py  pyproject.toml
codenames/: do.py  wordlist-eng.txt
fitbit-clockface/watch-face/: package-lock.json  package.json
functions/: filter_for_strings_with_us_states_in_them.py  how_many_calories_in_this_meal.py  is_this_a_healthy_meal.py  random_canadian_province.py
generate-ornaments-from-text/: .gitignore  README.md  generate_3d_objects.sh  get_images.py
generate-ornaments-from-text/images/: BMW_supercar.png.mtl  BMW_supercar.png_mesh.mtl  BMW_supercar.png_model.ply  BMW_supercar_rgba.png.mtl  BMW_supercar_rgba.png_mesh.mtl  BMW_supercar_rgba.png_model.ply  Mario_from_Super_Mario_Bros.png.mtl  Mario_from_Super_Mario_Bros.png_mesh.mtl  red_rose_with_stem.png.mtl  (+24 more)
karpathy-lectures/: 98-505-X2021007_eng_csv_data.csv  98-505-X2021007_eng_meta.txt  README_meta.txt  lecture-02-mlp.ipynb  lecture02.ipynb  lecture02.py  lecture_03_batchnorm.ipynb  lecture_p2_mlp.py  main.py  pyproject.toml
lab/: learning_instructor_library.py  openai_vision_experiments.py  product_to_software.csv
lc3-vm/: assembler.py  check_kb.asm  keyboard_echo.asm  main.asm  min.asm  multiply.asm  print_ascii.asm  sample.asm  vm.py
llama-index-exps/: do.py
mathacademy/: api.py  driver.py  factoring.py  generate_graph.py  test_factoring.py
mcp-shenanigans/: client.py  mcp_server.py  pyproject.toml  requirements.txt
strudel-exp/: social_networl.strdl
workout-videos-create/: create_compilation.sh  create_video.py  create_video.sh  test_videos.csv
(+55 files in other folders)
